# gpui-remixicon

./: Cargo.toml  README.md  build.rs
examples/: gallery.rs  gpui_icon.rs
research/: Cargo.toml  custom_icon.rs
src/: icon.rs  lib.rs
