[package]
name = "gpui-remixicon"
version = "0.2.0"
edition = "2024"
description = "RemixIcon icons for GPUI"
license = "Apache-2.0"
repository = "https://github.com/masacento/gpui-remixicon"

[package.metadata.remixicon]
source = "https://github.com/Remix-Design/RemixIcon.git"
version = "4.7.0"

[dependencies]
anyhow = "1"
gpui = "0.2.2"
rust-embed = "8"
gpui-component = { version = "0.5.0", optional = true }

[build-dependencies]
heck = "0.5"

[features]
default = ["all"]
all = [
    "arrows",
    "buildings",
    "business",
    "communication",
    "design",
    "development",
    "device",
    "document",
    "editor",
    "finance",
    "food",
    "health_and_medical",
    "logos",
    "map",
    "media",
    "others",
    "system",
    "user_and_faces",
    "weather",
]
gpui-component = ["dep:gpui-component"]
arrows = []
buildings = []
business = []
communication = []
design = []
development = []
device = []
document = []
editor = []
finance = []
food = []
health_and_medical = []
logos = []
map = []
media = []
others = []
system = []
user_and_faces = []
weather = []

[[example]]
name = "gallery"
path = "examples/gallery.rs"

[[example]]
name = "gpui_icon"
path = "examples/gpui_icon.rs"
required-features = ["gpui-component"]
